--- a/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/app/src/main/res/layout/activity_transaction_detail.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    app:layout_constraintVertical_chainStyle="packed"
     tools:context=".transaction.TransactionDetailActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -11,28 +14,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tv_sender_address_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/sender_address_label"
             app:layout_constraintEnd_toStartOf="@+id/tv_sender_address_value"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_sender_address_value"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/sender_address_value"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@+id/tv_sender_address_label" />
     </android.support.constraint.ConstraintLayout>
 
@@ -41,14 +41,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:weightSum="2"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/cl_sender_address">
 
         <TextView
             android:id="@+id/tv_receiver_address_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/receiver_address_label"
             app:layout_constraintEnd_toStartOf="@+id/tv_receiver_address_value"
             app:layout_constraintHorizontal_bias="0.5"
@@ -56,9 +55,8 @@
 
         <TextView
             android:id="@+id/tv_receiver_address_value"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/receiver_address_value"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -70,14 +68,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:weightSum="2"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/cl_receiver_address">
 
         <TextView
             android:id="@+id/tv_amount_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/amount_label"
             app:layout_constraintEnd_toStartOf="@+id/tv_amount_value"
             app:layout_constraintHorizontal_bias="0.5"
@@ -85,9 +82,8 @@
 
         <TextView
             android:id="@+id/tv_amount_value"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/amount_value"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
