--- a/app/src/main/res/layout/activity_ready_request.xml
+++ b/app/src/main/res/layout/activity_ready_request.xml
@@ -1,50 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.request.ReadyRequestActivity"
-    android:layout_margin="16dp"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:layout_constraintVertical_chainStyle="packed"
+    tools:context="com.example.graeme.beamitup.request.ReadyRequestActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_request_ready"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal"
+        android:text="@string/tv_request_ready"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_to_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/amount_label"
-            android:layout_weight="1"
-            android:layout_margin="16dp"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/amount_value"
-            android:id="@+id/tv_amount_value"
-            android:layout_weight="1"
-            android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/tv_request_ready">
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="2">
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/tv_receiver_address_label"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/to_address_label"
-            android:layout_weight="1"
-            android:layout_margin="16dp"/>
+            app:layout_constraintEnd_toStartOf="@+id/tv_receiver_address_value"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/tv_receiver_address_value"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/to_address_value"
-            android:id="@+id/tv_to_address_value"
-            android:layout_weight="1"
-            android:layout_margin="16dp"/>
-    </LinearLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tv_receiver_address_label" />
 
-</LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_amount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/cl_to_address"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_amount_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/amount_label"
+            app:layout_constraintEnd_toStartOf="@+id/tv_amount_value"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_amount_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/amount_value"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tv_amount_label" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.constraint.ConstraintLayout>
