--- a/app/src/main/res/layout/activity_wallet_detail.xml
+++ b/app/src/main/res/layout/activity_wallet_detail.xml
@@ -7,35 +7,44 @@
     android:layout_margin="16dp"
     tools:context=".wallet.WalletDetailActivity">
 
-    <TextView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/et_wallet_nickname"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/et_wallet_nickname"
-        android:layout_margin="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_wallet_nickname"
-        android:text="@string/tv_wallet_nickname" >
-    </TextView>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_wallet_nickname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_wallet_nickname"
-        app:layout_constraintLeft_toRightOf="@+id/tv_wallet_nickname"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:layout_margin="8dp"
-        android:text="@string/et_wallet_nickname"
-        android:id="@+id/et_wallet_nickname"/>
+        <TextView
+            android:id="@+id/tv_wallet_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_wallet_nickname"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/et_wallet_nickname"
+            app:layout_constraintEnd_toStartOf="@+id/et_wallet_nickname"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/et_wallet_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:text="@string/et_wallet_nickname"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_wallet_nickname"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tv_wallet_nickname"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
 
     <fragment
-        app:layout_constraintTop_toBottomOf="@+id/tv_wallet_nickname"
+        app:layout_constraintTop_toBottomOf="@+id/cl_wallet_nickname"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:name="com.example.graeme.beamitup.qr.CopyableQRImageFragment"
         android:id="@+id/frag_qr_code_display"
         android:layout_width="wrap_content"
@@ -47,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/frag_qr_code_display"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:name="com.example.graeme.beamitup.CopyableAddressFragment"
         android:id="@+id/frag_copyable_text_display"
         android:layout_width="wrap_content"
@@ -62,7 +71,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:text="@string/btn_save_wallet"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:layout_gravity="center"
         android:id="@+id/btn_save_wallet"/>
 
