--- a/app/src/main/res/layout/frag_list_item_wallet.xml
+++ b/app/src/main/res/layout/frag_list_item_wallet.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_wallet_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_wallet_id_default"
         android:layout_margin="16dp"
-        />
+        android:text="@string/tv_wallet_id_default"
+        app:layout_constraintEnd_toStartOf="@+id/tv_wallet_nickname"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_wallet_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_wallet_nickname"
         android:layout_margin="16dp"
-        />
+        android:text="@string/tv_wallet_nickname"
+        app:layout_constraintEnd_toStartOf="@+id/tv_wallet_address"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tv_wallet_id" />
 
     <TextView
         android:id="@+id/tv_wallet_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_wallet_address_default"
         android:layout_margin="16dp"
-        />
+        android:text="@string/tv_wallet_address_default"
+        app:layout_constraintEnd_toStartOf="@+id/tv_wallet_nickname"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tv_wallet_nickname" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
