--- a/app/src/main/res/layout/activity_receive_request.xml
+++ b/app/src/main/res/layout/activity_receive_request.xml
@@ -76,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_decline_request"
+            android:background="@color/alien_red_dark"
             app:layout_constraintEnd_toStartOf="@+id/btn_accept_request"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
@@ -85,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_accept_request"
+            android:background="@color/alien_green_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btn_decline_request" />
