--- a/app/src/main/res/layout/frag_list_item_wallet.xml
+++ b/app/src/main/res/layout/frag_list_item_wallet.xml
@@ -6,33 +6,23 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tv_wallet_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/tv_wallet_id_default"
-        app:layout_constraintEnd_toStartOf="@+id/tv_wallet_nickname"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
         android:id="@+id/tv_wallet_nickname"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/tv_wallet_nickname"
         app:layout_constraintEnd_toStartOf="@+id/tv_wallet_address"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_wallet_id" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_wallet_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/tv_wallet_address_default"
-        app:layout_constraintEnd_toStartOf="@+id/tv_wallet_nickname"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:singleLine="true"
+        android:ellipsize="middle"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_wallet_nickname" />
 
 </android.support.constraint.ConstraintLayout>
