--- a/app/src/main/res/layout/activity_wallet_detail.xml
+++ b/app/src/main/res/layout/activity_wallet_detail.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_margin="16dp"
     tools:context=".wallet.WalletDetailActivity">
 
@@ -59,7 +60,7 @@
         android:layout_margin="16dp"
         android:name="com.example.graeme.beamitup.CopyableAddressFragment"
         android:id="@+id/frag_copyable_text_display"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:layout="@layout/frag_copyable_address"
         />
