--- a/app/src/main/res/layout/frag_copyable_address.xml
+++ b/app/src/main/res/layout/frag_copyable_address.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".CopyableAddressFragment">
 
     <TextView
         android:id="@+id/tv_wallet_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:text="@string/tv_wallet_address_default"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
