--- a/app/src/main/res/layout/frag_copyable_address.xml
+++ b/app/src/main/res/layout/frag_copyable_address.xml
@@ -11,6 +11,9 @@
         android:id="@+id/tv_wallet_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:singleLine="true"
+        android:ellipsize="middle"
         android:text="@string/tv_wallet_address_default"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
