--- a/app/src/main/res/layout/activity_wallet_detail.xml
+++ b/app/src/main/res/layout/activity_wallet_detail.xml
@@ -46,7 +46,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="16dp"
-        android:name="com.example.graeme.beamitup.qr.CopyableQRImageFragment"
+        android:name="com.example.graeme.beamitup.copyable.CopyableQRImageFragment"
         android:id="@+id/frag_qr_code_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="16dp"
-        android:name="com.example.graeme.beamitup.CopyableAddressFragment"
+        android:name="com.example.graeme.beamitup.copyable.CopyableAddressFragment"
         android:id="@+id/frag_copyable_text_display"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
