--- a/app/src/main/res/layout/frag_copyable_address.xml
+++ b/app/src/main/res/layout/frag_copyable_address.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".CopyableAddressFragment">
+    tools:context=".copyable.CopyableAddressFragment">
 
     <TextView
         android:id="@+id/tv_wallet_address"
